--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
+  "name": "tabbed-testing",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
-    "tailwindcss": "^3.4.17"
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "typescript": "~5.8.3",
+    "vite": "^6.3.5"
   },
   "dependencies": {
-    "serve": "^14.2.4"
+    "@tailwindcss/vite": "^4.1.8",
+    "tailwindcss": "^4.1.8"
   }
 }
